Refatorado a OperacaoView. Adicionado a coluna do preco calculado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mariadb://${DB_HOST:192.168.22.245}:${DB_PORT:5555}/f
 spring.datasource.username=${DB_USER:user}
 spring.datasource.password=${DB_PASSWORD:nB132MUlpZ4jxn7f}
 # Configuracoes gerais do Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
