Refatorado o import view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.datasource.hikari.validation-query=SELECT 1
 # Ordem das insercoes para otimizar desempenho
 hibernate.order_inserts=true
 # Configuracao de logs
-logging.file.name=UTF-8
+logging.file.name=application.log
 logging.level.root=INFO
 logging.level.br.dev.rodrigopinheiro=DEBUG
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
